# thermal-printer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: receipt.md
.claude/skills/: forge  forge-ambition  forge-build  forge-debug  forge-discovery  forge-dx  forge-harden  forge-init  forge-plan  forge-polish  forge-retro  forge-review  forge-ship
.claude/skills/forge-ambition/: SKILL.md
.claude/skills/forge-build/: SKILL.md
.claude/skills/forge-debug/: SKILL.md
.claude/skills/forge-discovery/: SKILL.md
.claude/skills/forge-dx/: SKILL.md
.claude/skills/forge-harden/: SKILL.md
.claude/skills/forge-init/: SKILL.md
.claude/skills/forge-plan/: SKILL.md
.claude/skills/forge-polish/: SKILL.md
.claude/skills/forge-retro/: SKILL.md
.claude/skills/forge-review/: SKILL.md
.claude/skills/forge-ship/: SKILL.md
src/thermal_print/: __init__.py  cli.py  llm.py  printer.py  receipt.py  session.py  star_raster.py  state.py
tests/: conftest.py  test_llm.py  test_new_templates.py  test_receipt_layout.py  test_receipt_template.py  test_session_parser.py  test_state.py  test_template_discovery.py
tests/fixtures/: session-empty.jsonl  session-partial-trailing.jsonl  session-sample.jsonl
wiki/: architecture.md  brief.md  build-log.md  improvements.md  index.md  learnings.md  plan.md  retro.md
wiki/decisions/: 0001-shape.md  0002-cli-and-packaging.md  0003-template-plugin-mechanism.md  0004-receipt-layout-grammar.md  0005-session-stats-schema.md  0006-llm-summary.md
wiki/notes/: 2026-05-27-tsp143iiiu-default-mode.md
(+16 files in other folders)
