[project]
name = "thermal-printer"
version = "0.1.0"
description = "CLI to drive a Star TSP 100III thermal printer; backbone for /receipt in Claude Code."
requires-python = ">=3.11"
dependencies = [
    "python-escpos==3.1",
    "pyusb==1.3.1",
    "Pillow==12.2.0",
]

[project.scripts]
thermal-print = "thermal_print.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thermal_print"]
artifacts = ["src/thermal_print/assets/*.png"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
